# hyperpush-mono

./: .gitignore  CONTRIBUTING.md  README.md
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: authoritative-verification.yml  deploy-services.yml  deploy.yml  release.yml
.gsd/: DECISIONS.md  KNOWLEDGE.md  PROJECT.md  QUEUE-ORDER.json  REQUIREMENTS.md  doctor-history.jsonl  event-log.jsonl  gsd.db-wal  state-manifest.json
.gsd/journal/: 2026-03-23.jsonl  2026-03-24.jsonl  2026-03-25.jsonl
.gsd/reports/: M034-2026-03-28T01-04-36.html  index.html  reports.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v11.0-MILESTONE-AUDIT.md  v11.0-REQUIREMENTS.md  v11.0-ROADMAP.md
.tmp_fmt_probe.N0UnDt/: worker.mpl
.tmp_supervisor_probe/: stdout.txt
.tmp_supervisor_probe2/: stdout.txt
benchmarks/: run_benchmarks.sh
compiler/mesh-pkg/: Cargo.toml
compiler/mesh-pkg/src/: lib.rs  lockfile.rs  manifest.rs  resolver.rs  scaffold.rs
mesher/: .env.example  README.md  config.mpl  main.mpl
reference-backend/: main.mpl
scripts/: verify-landing-surface.sh  verify-m033-s04.sh  verify-m034-s01.sh  verify-m034-s02-workflows.sh  verify-m034-s03.ps1  verify-m034-s03.sh  verify-m034-s05-workflows.sh  verify-m034-s05.sh  verify-m047-s04.sh  verify-m047-s06.sh  verify-m050-s02.sh  verify-m050-s03.sh  verify-m051-s01.sh  verify-m051-s02.sh  verify-m051-s04.sh  verify-production-proof-surface.sh
(+287 files in other folders)
