[package]
name = "mesh-pkg"
version = "0.1.0"
edition = "2021"
description = "Mesh language package manager (manifest parsing, dependency resolution, lockfile)"

[dependencies]
toml = { workspace = true }
git2 = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { version = "3", features = ["gzip"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
